[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sceens/Units/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/conferenceroom..png" type="Texture" id=2]
[ext_resource path="res://12barsblues_practice.ogg" type="AudioStream" id=3]
[ext_resource path="res://Tiles/OfficeTiles.tres" type="TileSet" id=4]
[ext_resource path="res://Scripts/World0.gd" type="Script" id=6]
[ext_resource path="res://Mario-Kart-DS.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 194.278, 639.345 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 7 )

[node name="World0" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 74, 472 )

[node name="TileMap" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 2, 1, 0, 4, 1, 0, 6, 1, 0, 8, 1, 0, 10, 1, 0, 12, 1, 0, 14, 1, 0, 16, 1, 0, 18, 1, 0, 65536, 1, 0, 65538, 1, 0, 65540, 1, 0, 65542, 1, 0, 65544, 1, 0, 65546, 1, 0, 65548, 1, 0, 65550, 1, 0, 65552, 1, 0, 65554, 1, 0, 131072, 1, 0, 131074, 1, 0, 131076, 1, 0, 131078, 1, 0, 131080, 1, 0, 131082, 1, 0, 131084, 1, 0, 131086, 1, 0, 131088, 1, 0, 131090, 1, 0, 196608, 1, 0, 196610, 1, 0, 196612, 1, 0, 196614, 1, 0, 196616, 1, 0, 196618, 1, 0, 196620, 1, 0, 196622, 1, 0, 196624, 1, 0, 196626, 1, 0, 262144, 1, 0, 262146, 1, 0, 262148, 1, 0, 262150, 1, 0, 262152, 1, 0, 262154, 1, 0, 262156, 1, 0, 262158, 1, 0, 262160, 1, 0, 262162, 1, 0, 327680, 1, 0, 327682, 1, 0, 327684, 1, 0, 327686, 1, 0, 327688, 1, 0, 327690, 1, 0, 327692, 1, 0, 327694, 1, 0, 327696, 1, 0, 327698, 1, 0, 393216, 1, 0, 393218, 1, 0, 393220, 1, 0, 393222, 1, 0, 393224, 1, 0, 393226, 1, 0, 393228, 1, 0, 393230, 1, 0, 393232, 1, 0, 393234, 1, 0, 458752, 1, 0, 458754, 1, 0, 458756, 1, 0, 458758, 1, 0, 458760, 1, 0, 458762, 1, 0, 458764, 1, 0, 458766, 1, 0, 458768, 1, 0, 458770, 1, 0, 524288, 1, 0, 524290, 1, 0, 524292, 1, 0, 524294, 1, 0, 524296, 1, 0, 524298, 1, 0, 524300, 1, 0, 524302, 1, 0, 524304, 1, 0, 524306, 1, 0, 655356, 0, 0, 655358, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 1302.08, 574.233 )

[node name="End" type="Area2D" parent="."]
position = Vector2( -1.05261, -1.05264 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2( -263.027, 626.811 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Score Label" type="RichTextLabel" parent="."]
margin_right = 256.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Score  0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Windows" type="Sprite" parent="."]
position = Vector2( 1554, 370.696 )
scale = Vector2( 1.5, 1.5 )
z_index = -1
texture = ExtResource( 2 )

[node name="Picker" type="Node2D" parent="."]

[node name="Next" type="Button" parent="Picker"]
margin_left = 105.449
margin_top = 388.276
margin_right = 133.449
margin_bottom = 408.276
text = "=>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="Button" parent="Picker"]
margin_left = 8.38
margin_top = 388.276
margin_right = 36.38
margin_bottom = 408.276
text = "<="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Picker"]
margin_left = 45.0
margin_top = 381.0
margin_right = 98.0
margin_bottom = 421.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Change Pet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Picker"]
margin_left = 191.344
margin_top = 386.879
margin_right = 232.344
margin_bottom = 406.879
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cat" type="Button" parent="Picker"]
margin_left = 25.0
margin_top = 355.0
margin_right = 57.0
margin_bottom = 375.0
text = "Cat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dog" type="Button" parent="Picker"]
margin_left = 71.0
margin_top = 355.0
margin_right = 108.0
margin_bottom = 375.0
text = "Dog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="GameOver"]
margin_left = 217.881
margin_top = 198.328
margin_right = 551.881
margin_bottom = 238.328
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameOver"]
margin_left = 266.765
margin_top = 256.29
margin_right = 409.765
margin_bottom = 282.29
custom_fonts/font = SubResource( 4 )
text = "Try Again?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Position2D" parent="."]
position = Vector2( 71.9287, 472.774 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="area_entered" from="End" to="." method="_on_End_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="Picker/Next" to="." method="_on_Next_button_up"]
[connection signal="button_up" from="Picker/Previous" to="." method="_on_Previous_button_up"]
[connection signal="button_up" from="Picker/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Picker/Cat" to="." method="_on_Cat_button_up"]
[connection signal="button_up" from="Picker/Dog" to="." method="_on_Dog_button_up"]
[connection signal="button_up" from="GameOver/Button" to="." method="_on_Button_button_up"]
